src/main/gen/com/github/jakobeha/intellijsmplcoccinelle/psi/SmPLParser.java
// This is a generated file. Not intended for manual editing.
package com.github.jakobeha.intellijsmplcoccinelle.psi;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.github.jakobeha.intellijsmplcoccinelle.psi.SmPLTypes.*;
import static com.github.jakobeha.intellijsmplcoccinelle.psi.SmPLParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class SmPLParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return program(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ASSIGNMENT_OPERATOR_METADECL, ATTRIBUTE_METADECL, ATTRIBUTE_NAME_METADECL, BINARY_OPERATOR_METADECL,
      CONSTANT_METADECL, CTYPE_METADECL, DECLARATION_METADECL, DECLARER_METADECL,
      DECLARER_NAME_METADECL, EXPRESSION_METADECL, FIELD_METADECL, FORMAT_METADECL,
      FRESH_IDENTIFIER_METADECL, IDENTIFIER_METADECL, IDEXPRESSION_METADECL, INITIALIZER_METADECL,
      ITERATOR_METADECL, ITERATOR_NAME_METADECL, METADECL, METAVARIABLE_METADECL,
      PARAMETER_METADECL, POSITION_METADECL, SCRIPT_METADECL, STATEMENT_METADECL,
      SYMBOL_METADECL, TYPEDEF_METADECL, TYPE_METADECL, UNARY_OPERATOR_METADECL),
  };

  /* ********************************************************** */
  // 'assignment operator' <<commaSeparate assignopdecl>>
  public static boolean assignment_operator_metadecl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_operator_metadecl")) return false;
    if (!nextTokenIs(b, "<metadecl>", ASSIGNMENT_OPERATOR)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT_OPERATOR_METADECL, "<metadecl>");
    r = consumeToken(b, ASSIGNMENT_OPERATOR);
    p = r; // pin = 1
    r = r && commaSeparate(b, l + 1, SmPLParser::assignopdecl);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // '=' | '-=' | '+=' | '*=' | '/=' | '%=' | '<<=' | '>>=' | '&=' | '^=' | '|='
  public static boolean assignop(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignop")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNOP, "<assignop>");
    r = consumeToken(b, EQUALS);
    if (!r) r = consumeToken(b, "-=");
    if (!r) r = consumeToken(b, "+=");
    if (!r) r = consumeToken(b, "*=");
    if (!r) r = consumeToken(b, "/=");
    if (!r) r = consumeToken(b, "%=");
    if (!r) r = consumeToken(b, "<<=");
    if (!r) r = consumeToken(b, ">>=");
    if (!r) r = consumeToken(b, "&=");
    if (!r) r = consumeToken(b, "^=");
    if (!r) r = consumeToken(b, "|=");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // assignop | '{' <<commaSeparate assignop>> '}'
  static boolean assignop_constraint(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignop_constraint")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = assignop(b, l + 1);
    if (!r) r = assignop_constraint_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '{' <<commaSeparate assignop>> '}'
  private static boolean assignop_constraint_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignop_constraint_1")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, LBRACE);
    p = r; // pin = 1
    r = r && report_error_(b, commaSeparate(b, l + 1, SmPLParser::assignop));
    r = p && consumeToken(b, RBRACE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // pmid ['=' assignop_constraint]
  public static boolean assignopdecl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignopdecl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNOPDECL, "<assignopdecl>");
    r = pmid(b, l + 1);
    r = r && assignopdecl_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ['=' assignop_constraint]
  private static boolean assignopdecl_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignopdecl_1")) return false;
    assignopdecl_1_0(b, l + 1);
    return true;
  }

  // '=' assignop_constraint
  private static boolean assignopdecl_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignopdecl_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQUALS);
    r = r && assignop_constraint(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'attribute' ids
  public static boolean attribute_metadecl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_metadecl")) return false;
    if (!nextTokenIs(b, "<metadecl>", ATTRIBUTE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ATTRIBUTE_METADECL, "<metadecl>");
    r = consumeToken(b, ATTRIBUTE);
    p = r; // pin = 1
    r = r && ids(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // 'attribute name' ids
  public static boolean attribute_name_metadecl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_name_metadecl")) return false;
    if (!nextTokenIs(b, "<metadecl>", ATTRIBUTE_NAME)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ATTRIBUTE_NAME_METADECL, "<metadecl>");
    r = consumeToken(b, ATTRIBUTE_NAME);
    p = r; // pin = 1
    r = r && ids(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // 'binary operator' <<commaSeparate binopdecl>>
  public static boolean binary_operator_metadecl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binary_operator_metadecl")) return false;
    if (!nextTokenIs(b, "<metadecl>", BINARY_OPERATOR)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BINARY_OPERATOR_METADECL, "<metadecl>");
    r = consumeToken(b, BINARY_OPERATOR);
    p = r; // pin = 1
    r = r && commaSeparate(b, l + 1, SmPLParser::binopdecl);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // '+' | '-' | '*' | '/' | '%' | '<<' | '>>' | '<' | '<=' | '>' | '>=' | '==' | '!=' | '&' | '^' | '|' | '&&' | '||'
  public static boolean binop(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binop")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINOP, "<binop>");
    r = consumeToken(b, "+");
    if (!r) r = consumeToken(b, "-");
    if (!r) r = consumeToken(b, STAR);
    if (!r) r = consumeToken(b, "/");
    if (!r) r = consumeToken(b, "%");
    if (!r) r = consumeToken(b, LEFT_LEFT);
    if (!r) r = consumeToken(b, ">>");
    if (!r) r = consumeToken(b, "<");
    if (!r) r = consumeToken(b, "<=");
    if (!r) r = consumeToken(b, ">");
    if (!r) r = consumeToken(b, ">=");
    if (!r) r = consumeToken(b, "==");
    if (!r) r = consumeToken(b, NOT_EQUALS);
    if (!r) r = consumeToken(b, AND);
    if (!r) r = consumeToken(b, "^");
    if (!r) r = consumeToken(b, OR);
    if (!r) r = consumeToken(b, DOUBLE_AND);
    if (!r) r = consumeToken(b, DOUBLE_OR);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // binop | '{' <<commaSeparate binop>> '}'
  static boolean binop_constraint(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binop_constraint")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = binop(b, l + 1);
    if (!r) r = binop_constraint_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '{' <<commaSeparate binop>> '}'
  private static boolean binop_constraint_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binop_constraint_1")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, LBRACE);
    p = r; // pin = 1
    r = r && report_error_(b, commaSeparate(b, l + 1, SmPLParser::binop));
    r = p && consumeToken(b, RBRACE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // pmid  ['=' binop_constraint]
  public static boolean binopdecl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binopdecl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINOPDECL, "<binopdecl>");
    r = pmid(b, l + 1);
    r = r && binopdecl_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ['=' binop_constraint]
  private static boolean binopdecl_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binopdecl_1")) return false;
    binopdecl_1_0(b, l + 1);
    return true;
  }

  // '=' binop_constraint
  private static boolean binopdecl_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binopdecl_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQUALS);
    r = r && binop_constraint(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '#include' string
  public static boolean c_include_cocci(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "c_include_cocci")) return false;
    if (!nextTokenIs(b, HASH_INCLUDE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, C_INCLUDE_COCCI, null);
    r = consumeTokens(b, 1, HASH_INCLUDE, STRING);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // script_code |
  //     transformation
  static boolean changeset(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "changeset")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_);
    r = script_code(b, l + 1);
    if (!r) r = transformation(b, l + 1);
    exit_section_(b, l, m, r, false, SmPLParser::changeset_recover);
    return r;
  }

  /* ********************************************************** */
  // !('@' | '@@' | '@initialize:' | '@script:' | '@finalize:')
  static boolean changeset_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "changeset_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !changeset_recover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '@' | '@@' | '@initialize:' | '@script:' | '@finalize:'
  private static boolean changeset_recover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "changeset_recover_0")) return false;
    boolean r;
    r = consumeToken(b, AT);
    if (!r) r = consumeToken(b, DOUBLE_AT);
    if (!r) r = consumeToken(b, AT_INITIALIZE_COLON);
    if (!r) r = consumeToken(b, AT_SCRIPT_COLON);
    if (!r) r = consumeToken(b, AT_FINALIZE_COLON);
    return r;
  }

  /* ********************************************************** */
  // include_cocci | virtual_cocci
  public static boolean cocci_header(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cocci_header")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COCCI_HEADER, "<cocci header>");
    r = include_cocci(b, l + 1);
    if (!r) r = virtual_cocci(b, l + 1);
    exit_section_(b, l, m, r, false, SmPLParser::cocci_header_recover);
    return r;
  }

  /* ********************************************************** */
  // !('@' | '@@' | '@initialize:' | '@script:' | '@finalize:' | '#include' | USING_INCLUDE | VIRTUAL_INCLUDE)
  static boolean cocci_header_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cocci_header_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !cocci_header_recover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '@' | '@@' | '@initialize:' | '@script:' | '@finalize:' | '#include' | USING_INCLUDE | VIRTUAL_INCLUDE
  private static boolean cocci_header_recover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cocci_header_recover_0")) return false;
    boolean r;
    r = consumeToken(b, AT);
    if (!r) r = consumeToken(b, DOUBLE_AT);
    if (!r) r = consumeToken(b, AT_INITIALIZE_COLON);
    if (!r) r = consumeToken(b, AT_SCRIPT_COLON);
    if (!r) r = consumeToken(b, AT_FINALIZE_COLON);
    if (!r) r = consumeToken(b, HASH_INCLUDE);
    if (!r) r = consumeToken(b, USING_INCLUDE);
    if (!r) r = consumeToken(b, VIRTUAL_INCLUDE);
    return r;
  }

  /* ********************************************************** */
  // <<p>> (',' <<p>>)*
  static boolean commaSeparate(PsiBuilder b, int l, Parser _p) {
    if (!recursion_guard_(b, l, "commaSeparate")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = _p.parse(b, l);
    p = r; // pin = 1
    r = r && commaSeparate_1(b, l + 1, _p);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (',' <<p>>)*
  private static boolean commaSeparate_1(PsiBuilder b, int l, Parser _p) {
    if (!recursion_guard_(b, l, "commaSeparate_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!commaSeparate_1_0(b, l + 1, _p)) break;
      if (!empty_element_parsed_guard_(b, "commaSeparate_1", c)) break;
    }
    return true;
  }

  // ',' <<p>>
  private static boolean commaSeparate_1_0(PsiBuilder b, int l, Parser _p) {
    if (!recursion_guard_(b, l, "commaSeparate_1_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, COMMA);
    p = r; // pin = 1
    r = r && _p.parse(b, l);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // 'constant' [ctype_or_types] pmids_with_constraints
  public static boolean constant_metadecl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constant_metadecl")) return false;
    if (!nextTokenIs(b, "<metadecl>", CONSTANT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONSTANT_METADECL, "<metadecl>");
    r = consumeToken(b, CONSTANT);
    p = r; // pin = 1
    r = r && report_error_(b, constant_metadecl_1(b, l + 1));
    r = p && pmids_with_constraints(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // [ctype_or_types]
  private static boolean constant_metadecl_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constant_metadecl_1")) return false;
    ctype_or_types(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // id_compare_constraint |
  //     int_compare_constraint |
  //     regexp_constraint |
  //     script_constraint
  public static boolean constraint(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constraint")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONSTRAINT, "<constraint>");
    r = id_compare_constraint(b, l + 1);
    if (!r) r = int_compare_constraint(b, l + 1);
    if (!r) r = regexp_constraint(b, l + 1);
    if (!r) r = script_constraint(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
